--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="{@@stwSessionLanguage}">
+<html lang="@@stwLanguage">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{@@stwUnitTitle}</title>
+    <title>@@stwPageTitle</title>
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
 
     <link rel="stylesheet" href="https://kit.fontawesome.com/a29c3d2fa4.css" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="/stwStyles/stwStyleDefault.css"> -->
-    <link rel="stylesheet" href="/css/stwStyle.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/stwStyle.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
