--- a/stwStudio/panels/roles.html
+++ b/stwStudio/panels/roles.html
@@ -26,7 +26,7 @@
     </h1>
     <form class="stwsHideLabels" onchange="stwStudio.submitForm(event)">
         <ol>
-            <li><label>Name</label><input type="text" name="name" placeholder="Name" title="Name" required></li>
+            <li><label><span>Name</span><input type="text" name="name" placeholder="Name" title="Name" required></label></li>
         </ol>
     </form>
 </article>
