--- a/stwStudio/panels/settings.html
+++ b/stwStudio/panels/settings.html
@@ -9,7 +9,7 @@
                 <option value="stwsDark">Dark</option>
                 <option value="stwsLight">Light</option>
             </select></label></li>
-            <li><label>Trim color <input id="mainColor" type="color" name="mainColor" value="#ff004c"></label></li>
+            <li><label><span>Trim color <input id="mainColor" type="color" name="mainColor" value="#ff004c"></span></label></li>
             <li><label>Hide form labels<select name="hideLabels">
                 <option value="true">Yes</option>
                 <option value="false">No</option>
