--- a/stwStudio/panels/webbase.html
+++ b/stwStudio/panels/webbase.html
@@ -74,25 +74,25 @@
                         title="CSS class">
                 </label></li>
             <li><label><span>Type</span><select name="subtype" title="Type">
-                        <option value="Text" data-value="-100" selected>Text</option>
-                        <option value="Form" data-value="-500">Form</option>
-                        <option value="Table" data-value="-300">Table</option>
-                        <option value="List" data-value="-200">List</option>
-                        <option value="Tree" data-value="-400">Tree</option>
-                        <option value="Tabs" data-value="-105">Tabs</option>
-                        <option value="Group" data-value="-106">Group</option>
-                        <option value="-800" disabled>Calendar</option>
-                        <option value="-600" disabled>Graph</option>
-                        <option value="" disabled>Map</option>
-                        <option value="Menu" data-value="-102">Menu</option>
+                        <option value="Text" data-value="-100" data-fa="f893" selected>Text</option>
+                        <option value="Form" data-value="-500" data-fa="e60f">Form</option>
+                        <option value="Table" data-value="-300" data-fa="f0ce">Table</option>
+                        <option value="List" data-value="-200" data-fa="f03a">List</option>
+                        <option value="Tree" data-value="-400" data-fs="e1d2">Tree</option>
+                        <option value="Tabs" data-value="-105" data-fs="">Tabs</option>
+                        <option value="Group" data-value="-106" data-fs="f5fd">Group</option>
+                        <option value="Calendar" data-value="-800" data-fs="f133">Calendar</option>
+                        <option value="-600" data-fs="f201" disabled>Plot</option>
+                        <option value="" data-fs="f279" disabled>Map</option>
+                        <option value="Menu" data-value="-102" data-fs="f0c9">Menu</option>
                         <option value="-101" disabled>Area links</option>
-                        <option value="-103" disabled>Indexed links</option>
+                        <option value="-103" data-fs="f2b9" disabled>Indexed links</option>
                         <option value="Breadcrumbs" data-value="-104">Breadcrumbs</option>
-                        <option value="-601" disabled>Image map</option>
+                        <option value="-601" data-fs="f03e" disabled>Image map</option>
                         <option value="-700" disabled>Shortcut</option>
-                        <option value="-902" disabled>Client side code</option>
-                        <option value="-901" disabled>Server side code</option>
-                        <option value="Languages">Languages</option>
+                        <option value="-902" data-fs="f5fc" disabled>Client side code</option>
+                        <option value="-901" data-fs="f233" disabled>Server side code</option>
+                        <option value="Languages" data-fs="f1ab">Languages</option>
                     </select></label></li>
             <li><label><span>Data source</span><select name="dsn" title="DSN">
                         <option value="" selected></option>
