Refactored stwPublic and stwPrivate

--- a/stwStudio/index.html
+++ b/stwStudio/index.html
@@ -53,7 +53,7 @@
                 <i tabindex="0" role="link" class="fa-light fa-fw fa-rotate-right" title="Refresh (F5)"
                     data-action="refresh"></i>
                 <i tabindex="0" role="link" class="fa-kit fa-fw fa-light-page-magnifying-glass"
-                    title="Inspect page in webbase (CTRL+I)" data-action="inspect"></i>
+                    title="Inspect page (CTRL+I)" data-action="inspect"></i>
                 <i tabindex="0" role="link" class="fa-light fa-fw fa-house-blank" title="Home" data-action="home"></i>
                 <input id="BrowseURL" type="url" name="url" placeholder="URL" onchange="stwStudio.setURL(event)"
                     require>
