--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Spin the Web&trade;</title>
+    <title>Spin the Web&trade; Studio</title>
     <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/16848901?s=200&v=4" type="image/x-icon" />
     <link rel="stylesheet" href="https://kit.fontawesome.com/a29c3d2fa4.css" crossorigin="anonymous">
 
@@ -12,7 +12,6 @@
         html,
         body {
             width: 100%;
-            height: 100%;
             margin: 0;
             padding: 0;
         }
@@ -22,13 +21,15 @@
             text-align: center;
             font-family: sans-serif;
         }
+        h1 {
+            font-size: medium;
+        }
     </style>
 </head>
 
 <body>
     <img src="https://avatars.githubusercontent.com/u/16848901?s=200&v=4" title="Spin the Web Logo">
-    <h1><i class="fa-solid fa-plug-circle-exclamation"></i> Sorry,
-        <script>document.write(location.href)</script> is temporarily offline</a>
+    <h1>Sorry, <script>document.write(location.href)</script> is temporarily offline</a>
     </h1>
     <p>Powered by Spin the Web&trade;</p>
     <p>
